# web-dev-deploy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: auth.py  config.py  database.py  index.py  models.py
api/routes/: auth.py  interactions.py  posts.py  tags.py
api/storage/: __init__.py  base.py  local_storage.py  supabase_storage.py
instruction/: prd-draft.md  prd.md
report/: final_report.md
static/: index.html
static/css/: style.css
static/js/: app.js
